--- a/web/css/styles1216.css
+++ b/web/css/styles1216.css
@@ -598,12 +598,18 @@ div.contentwithlines{
     padding-top: 10px;
     padding-bottom: 10px;
     margin: 0px;
-    text-align: center;
+ /*   text-align: center;*/
 }
 
 div.content{
     padding-top: 10px;
     padding-bottom: 10px;
     margin: 0px;
-    text-align: center;
+   /*text-align: center;*/
+}
+
+h4{
+    color: #009933;    
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
